[package]
name = "tenv"
version = "0.2.0"
edition = "2021"
authors = ["Mason Ginter <mason@dagint.com>"]
keywords = ["environment", "variables", "env"]
license = "MIT OR Apache-2.0"
description = "Small CLI for running commands with temporary environment variables"
categories = ["command-line-utilities", "config"]
repository = "https://github.com/Hpmason/tenv"
exclude = ["/.github"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argfile = "0.1.4"
clap = { version = "3.2.13", features = ["derive"] }
ctrlc = "3.2.2"
dirs = "4.0.0"
dunce = "1.0.2"
shellexpand = "2.1.2"
